修改文件: 2018-10-9Luogu1108低价买入.md

--- a/2018-10-9Luogu1108低价买入.md
+++ b/2018-10-9Luogu1108低价买入.md
@@ -8,5 +8,89 @@ grammar_cjkRuby: true
 不过值得注意的是这里所要用到的一些记录方案数的方法，他这里说
 >最大购买次数和拥有最大购买次数的方案数当二种方案“看起来一样”时（就是说它们构成的价格队列一样的时候）,这2种方案被认为是相同的。
 
+所以就得去重，一开始自己想到的是用set来做，但是没有能够成功。
+看下面的代码吧，学习别人的计数方法！
+
+~~~ cpp
+#include <bits/stdc++.h>
+using namespace std;
+const int maxn = 5005;
+int n, a[maxn];
+int dp[maxn];
+int f[maxn];
+int main() {
+  ios::sync_with_stdio(false), cin.tie(0), cout.tie(0);
+  cin >> n;
+  for(int i = 1; i <= n ; i++)
+    cin >> a[i];
+  int ans1 = 0, ans2 = 0;
+  for(int i = 1; i <= n; i++) {
+    dp[i] = 1;
+    for(int j = 1; j < i; j++)
+      if(a[i] < a[j]) {
+        dp[i] = max(dp[i], dp[j] + 1);
+      }
+    ans1 = max(ans1, dp[i]);
+  }
+  for(int i = 1; i <= n; i++) {
+    if(dp[i] == 1) f[i] = 1;
+    for(int j = 1; j < i; j++)//注意循环顺序
+      if(dp[i] == dp[j] + 1 && a[i] < a[j]) f[i] += f[j];
+      else if(dp[i] == dp[j] && a[i] == a[j]) f[i] = 0;
+    if(dp[i] == ans1) ans2 += f[i];
+  }
+  cout << ans1 << " " << ans2 << endl;
+}
+/*
+#include<cstdio>
+#include<cstring>
+#include<set>
+#define max(a,b) (a > b ? a : b)
+#define MAXN 5005
+#define P 13331
+using namespace std;
+typedef unsigned long long ull;
+int n,h[MAXN],f[MAXN],last[MAXN],ans,tot;
+ull w[MAXN];
+set<ull> s;
+int main(){
+	freopen("Buylow5.in","r",stdin);
+	scanf("%d",&n);
+	for(int i = 1;i <= n;i++){
+		scanf("%d",h + i);
+		f[i] = w[i] = 1;
+	}
+	ans = 1;
+	for(int i = 1;i <= n;i++){
+		for(int j = 1;j < i;j++){
+			if(h[i] < h[j] && f[i] < f[j] + 1){
+				f[i] = f[j] + 1;
+				w[i] = w[j] * P + h[i];
+				ans = max(ans,f[i]);
+			}
+		}
+	}
+	if(ans == 1){
+		printf("%d %d",ans,n);
+		return 0;
+	}
+	for(int i = 1;i <= n;i++){
+		if(f[i] == ans){
+			for(int j = 1;j < i;j++){
+				if(f[i] == f[j] + 1){
+					if(s.find(w[j] * P + h[i]) == s.end()){
+						s.insert(w[j] * P + h[i]);
+					}
+				}
+			}
+		}
+	}
+	printf("%d %d\n",ans,s.size());
+	return 0;
+}
+*/
+
+~~~
+
 
 今天时间 **{2018-10-9}**， `NOIP RP++` ！！！
