--- a/2018-10-10排列组合学习.md
+++ b/2018-10-10排列组合学习.md
@@ -13,18 +13,19 @@ grammar_cjkRuby: true
 二、相离问题插空法。
 
 相离，即不相邻，在不相邻的元素中插入其他元素。
-![](./images/1539140001077.png)
+
 三、定序问题缩倍法。
 
 定序就是在排列中让几个元素保持一定的顺序，这类题目用缩小倍数的解法比较方便。
 
-
+![enter description here](./images/1539140633704.png)
 
 四、标号排位问题分步法。
-![](./images/1539140008920.png)
+
+
 五、有需分配问题逐分法。
 
-
+![](./images/1539140008920.png)
 
 六、多元问题分类法。
 
