修改文件: 2018-10-10排列组合学习.md

--- a/2018-10-10排列组合学习.md
+++ b/2018-10-10排列组合学习.md
@@ -18,7 +18,7 @@ grammar_cjkRuby: true
 
 定序就是在排列中让几个元素保持一定的顺序，这类题目用缩小倍数的解法比较方便。
 
-![enter description here](./images/1539140633704.png)
+![](./images/1539140633704.png)
 
 四、标号排位问题分步法。
 
