--- a/2018-10-10欧拉回路Luogu2731.md
+++ b/2018-10-10欧拉回路Luogu2731.md
@@ -29,3 +29,67 @@ grammar_cjkRuby: true
 欧拉回路：所有点的入度等于出度，就存在一条欧拉回路。 
 这里可以换一种角度来理解，对于每一个点，每次进入这个节点，就一定有一条路可以出去，因此必定存在一条欧拉回路。 
 欧拉路径：最多有一点入度等于出度+1，最多有一点入度等于出度-1，就会有一条从出度大于入度（没有则等于）的点出发，到达出度小于入度（没有则等于）的点的一条欧拉路径。证明方法与无向图的欧拉路径类似。
+
+**对于求欧拉回路的问题，有Fluery算法和Hierholzers算法，两种算法。**
+
+后面一种算法无论是编程复杂度还是时间复杂度好像都比前种算法复杂度更优，但前者的应用广泛性好像比后者更高。
+
+>对于Hierholzers算法，前提是假设图G存在欧拉回路，即有向图任意 点的出度和入度相同。从任意一个起始点v开始遍历，直到再次到达 点v，即寻找一个环，这会保证一定可以到达点v，因为遍历到任意一 个点u，由于其出度和入度相同，故u一定存在一条出边，所以一定可 以到达v。将此环定义为C，如果环C中存在某个点x，其有出边不在环 中，则继续以此点x开始遍历寻找环C’，将环C、C’连接起来也是一个 大环，如此往复，直到图G中所有的边均已经添加到环中。
+
+
+参考代码，如下，需要注意的是这道题是说可以有重边，所有开始写的代码不太对
+
+~~~cpp
+#include<cstdio>
+#include<stack>
+#define max(a,b) (a > b ? a : b)
+using namespace std;
+int read(){
+	char c = getchar();
+	while(c < '0' || '9' < c)
+		c = getchar();
+	int x = 0;
+	while('0' <= c && c <= '9'){
+		x = 10 * x + c - '0';
+		c = getchar();
+	}
+	return x;
+}
+int f,x,y,d[505],k,p1,G[505][505];
+stack<int> s;
+
+void dfs(int u){
+	for(int v = 1;v <= k;v++){
+		if(G[u][v]){
+			G[u][v]--;G[v][u]--;
+			dfs(v);
+		}
+	}
+	s.push(u);
+}
+
+int main(){
+	//freopen("testdata.in","r",stdin);
+	//freopen("testdata.out","w",stdout);
+	f = read();
+	for(int i = 1;i <= f;i++){
+		x = read();y = read();
+		G[x][y]++;G[y][x]++;
+		d[x]++;d[y]++;
+		k = max(k,max(x,y));
+	}
+	p1 = 1;
+	for(int i = 1;i <= k;i++){
+		if(d[i] % 2){
+			p1 = i;
+			break; 
+		}
+	}
+	dfs(p1);
+	while(!s.empty()){
+		printf("%d\n",s.top());
+		s.pop();
+	}
+	return 0;
+} 
+~~~
