修改文件: 排列组合例题.md

--- a/排列组合例题.md
+++ b/排列组合例题.md
@@ -6,8 +6,19 @@ grammar_cjkRuby: true
 
 >五个人站成一排，其中甲、乙、丙三人有两人相邻，有多少排法？
 
-三个人里面取两个在一起就是C32 * A22=6种（3在下面 2在上面 下面也是这样）
+==三个人里面取两个在一起就是C32 * A22=6种（3在下面 2在上面 下面也是这样）
 这三个人可以看成是两组 插到另外两个人的缝隙就是插三个空
 则是C32 * A22
 另外两个可以随意站
-总共就是C32 * A22 * C32 * A22 * A22=72种站法!
+总共就是C32 * A22 * C32 * A22 * A22=72种站法!==
+
+>由数字0、1、2、3、4、5组成没有重复数字的6位数，其中个位数字小于十位的数字的共有（  ）
+
+==6个数进行排列,共有6!＝720个数.其中0在首位有5!＝120种,这不是有效的六位数,所以有意义的六位数共720-120＝600个.
+个位数字不是比十位大就是比十位小,概率各占50％,所以个位比十位小的有600/2＝300个.==
+
+>求方程x+y+z=10的正整数解的个数。(即：10个相同的小球分给三人，每人至少1个，有多少方法？)
+>
+   分析：将10个球排成一排，球与球之间形成9个空隙，将两个隔板插入这些空隙中（每空至多插一块隔板），规定由隔板分成的左、中、右三部分的球数分别为 x.y.z之值（如图）
+               ○○○    ○○○    ○○○○                
+则隔板与解的个数之间建立了一一对立关系，故解的个数为  个。实际运用隔板法解题时，在确定球数、如何插隔板等问题上形成了一些技巧。
