修改文件: 排列组合例题.md

--- a/排列组合例题.md
+++ b/排列组合例题.md
@@ -17,8 +17,12 @@ grammar_cjkRuby: true
 ==6个数进行排列,共有6!＝720个数.其中0在首位有5!＝120种,这不是有效的六位数,所以有意义的六位数共720-120＝600个.
 个位数字不是比十位大就是比十位小,概率各占50％,所以个位比十位小的有600/2＝300个.==
 
->求方程x+y+z=10的正整数解的个数。(即：10个相同的小球分给三人，每人至少1个，有多少方法？)
+>(0)、求方程x+y+z=10的正整数解的个数。(即：10个相同的小球分给三人，每人至少1个，有多少方法？)
 >
-   分析：将10个球排成一排，球与球之间形成9个空隙，将两个隔板插入这些空隙中（每空至多插一块隔板），规定由隔板分成的左、中、右三部分的球数分别为 x.y.z之值（如图）
+  ==分析：将10个球排成一排，球与球之间形成9个空隙，将两个隔板插入这些空隙中（每空至多插一块隔板），规定由隔板分成的左、中、右三部分的球数分别为 x.y.z之值（如图）==
                ○○○    ○○○    ○○○○                
-则隔板与解的个数之间建立了一一对立关系，故解的个数为  个。实际运用隔板法解题时，在确定球数、如何插隔板等问题上形成了一些技巧。
+==则隔板与解的个数之间建立了一一对立关系，故解的个数为  个。实际运用隔板法解题时，在确定球数、如何插隔板等问题上形成了一些技巧。==
+>(1)、求方程x+y+z=10 的非负整数解的个数。
+
+==分析：注意到x 、y 、z 可以为零，故上题解法中的限定“每空至多插一块隔板”就不成立了。怎么办呢？只要添加三个球，给 x、 y、z  各一个球。这样原问题就转化为求x+y+z=13 的正整数解的个数了，故解的个数为 =66个。==
+
