修改文件: 2018-10-10卡特兰数.md

--- a/2018-10-10卡特兰数.md
+++ b/2018-10-10卡特兰数.md
@@ -20,3 +20,5 @@ grammar_cjkRuby: true
 ![折线法](./images/1539170714684.png)
 
 现在只要减去跨越了x轴的情况数。对于任意跨越x轴的情况，必有将与y=-1相交。找出第一个与y=-1相交的点k，将k点以右的折线根据y=-1对称（即操作1与操作2互换了）。可以发现终点最终都会从（2n，0）对称到（2n，-2）。由于对称总是能进行的，且是可逆的。我们可以得出所有跨越了x轴的折线总数是与从（0,0）到（2n,-2）的折线总数。而后者的操作2比操作1要多0-（-2）=2次。即操作1为n-1,操作2为n+1。总数为C（2n，n-1）。
+
+![折线法证明](./images/1539170747055.png)
