修改文件: 2018-10-10卡特兰数.md

--- a/2018-10-10卡特兰数.md
+++ b/2018-10-10卡特兰数.md
@@ -3,8 +3,12 @@ title: 2018-10-10卡特兰数
 tags: 卡特兰数,数列,数学
 grammar_cjkRuby: true
 ---
-
 今天看到一个非常有趣的关于卡特兰数的证明方法
+
+***==Catalan数的定义：==***
+
+>令h(1)=1，Catalan数满足递归式：h(n) = h(1)h(n-1) + h(2) h(n-2) + … +h(n-1)*h(1)，n>=2
+**该递推关系的解为：h(n) = c(2n, n)/(n+1) = c(2n, n) - c(2n, n-1)**
 
 >1.饭后，姐姐洗碗，妹妹把姐姐洗过的碗一个一个地放进碗橱摞成一摞。一共有n个不同的碗，洗前也是摞成一摞的，也许因为小妹贪玩而使碗拿进碗橱不及时，姐姐则把洗过的碗摞在旁边，问：小妹摞起的碗有多少种可能的方式？
 2.给定n个数，有多少种出栈序列？
@@ -15,7 +19,7 @@ grammar_cjkRuby: true
 问题的答案是一个著名的数列，卡特兰数。该问题的代数解法比较抽象，而运用到几何上，用图片来描述，却有让人恍然大悟的感觉。
  
 
-事实上，可以认为问题是，任意两种操作，要求每种操作的总次数一样，且进行第k次操作2前必须先进行至少k次操作1。我们假设一个人在原点，操作1是此人沿右上角45°走一个单位（一个单位设为根号2，这样他第一次进行操作1就刚好走到（1,1）点），操作2是此人沿右下角45°走一个单位。第k次操作2前必须先进行至少k次操作1，就是说明所走出来的折线不能跨越x轴走到y=-1这条线上！在进行n次操作1和n此操作2后，此人必将到到达（2n，0）！若无跨越x轴的限制，折线的种数将为C（2n，n），即在2n次操作中选出n次作为操作1的方法数。
+事实上，可以认为问题是，任意两种操作，要求每种操作的总次数一样，且进行第k次操作2前必须先进行至少k次操作1。我们假设一个人在原点，操作1是此人沿右上角45°走一个单位（一个单位设为根号2，这样他第一次进行操作1就刚好走到（1,1）点），操作2是此人沿右下角45°走一个单位。第k次操作2前必须先进行至少k次操作1，就是说明所走出来的折线不能跨越x轴走到y=-1这条线上！在进行n次操作1和n次操作2后，此人必将到到达（2n，0）！若无跨越x轴的限制，折线的种数将为C（2n，n），即在2n次操作中选出n次作为操作1的方法数。
 
 ![折线法](./images/1539170714684.png)
 
