修改文件: 2018-10-10卡特兰数.md

--- a/2018-10-10卡特兰数.md
+++ b/2018-10-10卡特兰数.md
@@ -13,6 +13,7 @@ grammar_cjkRuby: true
 >1.饭后，姐姐洗碗，妹妹把姐姐洗过的碗一个一个地放进碗橱摞成一摞。一共有n个不同的碗，洗前也是摞成一摞的，也许因为小妹贪玩而使碗拿进碗橱不及时，姐姐则把洗过的碗摞在旁边，问：小妹摞起的碗有多少种可能的方式？
 2.给定n个数，有多少种出栈序列？
 3.一个有n个1和n个-1组成的字串，且前k个数的和均不小于0，那这种字串的总数为多少？
+4.绘画展览门票每张5元，如果有2n个人排队购票，每人一张，并且其中一半人恰有5元钱，另一半人恰有10元钱，而票房无零钱可找，那么如何将这2n个人排成一列，顺次购票，使得不至于因票房无零钱可找而耽误时间，应该采用什么算法解决呢？（分支限界法）
  
 这三个问题具有相同的结构，三个问题是可以互相转化。将姐姐放碗看做入栈操作，将妹妹放碗看做出栈操作。则问题一变为问题二。将入栈操作记为1，出栈记为-1，问题2变为问题3。
 
