修改文件: 2018-10-10SG函数与博弈论.md

--- a/2018-10-10SG函数与博弈论.md
+++ b/2018-10-10SG函数与博弈论.md
@@ -13,3 +13,23 @@ grammar_cjkRuby: true
         2、从任何必胜点N 操作，至少有一种方式可以进入必败点 P。
         3、无论如何操作，必败点P 都只能进入必胜点 N之外的点。
 我们研究必胜点和必败点的目的时间为题进行简化，有助于我们的分析。通常我们分析必胜点和必败点都是以终结点进行逆序分析。
+
+第一点：
+考虑各大堆大小分别为N1，N2，……Nk的一般的Nim博弈。将每一个数Ni表示为其二进制数（数的位数相等，不等时在前面补0）：
+N1 = as…a1a0
+N2 = bs…b1b0
+……
+Nk = ms…m1m0
+如果每一种大小的子堆的个数都是偶数，我们就称Nim博弈是平衡的，而对应位相加是偶数的称为平衡位，否则称为非平衡位。因此，Nim博弈是平衡的，当且仅当：
+
+
+as +bs + … + ms 是偶数，即as XOR bs XOR … XOR ms  = 0
+……
+a1 +b1 + … + m1 是偶数，即a1 XOR b1 XOR … XOR m1 = 0
+a0 +b0 + … + m0是偶数，即a0 XOR b0 XOR … XOR m0 = 0
+   
+
+于是，我们就能得出尼姆博弈中先手获胜策略：
+Bouton定理：先手能够在非平衡尼姆博弈中取胜，而后手能够在平衡的尼姆博弈中取胜。即状态(x1, x2, x3, …, xn)为P状态当且仅当x1 xor x2 xor x3 xor … xor xn =0。这样的操作也称为Nim和(Nim
+ Sum)。
+        我们以一个两堆物品的尼姆博弈作为试验。设游戏开始时游戏处于非平衡状态。这样，先手就能通过一种取子方式使得他取子后留给后手的是一个平衡状态下的游戏，接着无论后手如何取子，再留给先手的一定是一个非平衡状态游戏，如此反复进行，当后手在最后一次平衡状态下取子后，先手便能一次性取走所有的物品而获胜。而如果游戏开始时游戏牌平衡状态，那根据上述方式取子，最终后手能获。
