--- a/2018-10-10SG函数与博弈论.md
+++ b/2018-10-10SG函数与博弈论.md
@@ -141,6 +141,28 @@ SG[x]    0  1  0  1  2  3  2  0  1....
 3、最后模拟mex运算，也就是我们在标记值中 搜索 未被标记值 的最小值，将其赋值给SG(x)。
 
 4、我们不断的重复 2 - 3 的步骤，就完成了 计算1~n 的函数值。
+
+~~~cpp
+//f[N]:可改变当前状态的方式，N为方式的种类，f[N]要在getSG之前先预处理
+//SG[]:0~n的SG函数值
+//S[]:为x后继状态的集合
+int f[N],SG[MAXN],S[MAXN];
+void  getSG(int n){
+    int i,j;
+    memset(SG,0,sizeof(SG));
+    //因为SG[0]始终等于0，所以i从1开始
+    for(i = 1; i <= n; i++){
+        //每一次都要将上一状态 的 后继集合 重置
+        memset(S,0,sizeof(S));
+        for(j = 0; f[j] <= i && j <= N; j++)
+            S[SG[i-f[j]]] = 1;  //将后继状态的SG函数值进行标记
+        for(j = 0;; j++) if(!S[j]){   //查询当前后继状态SG值中最小的非零值
+            SG[i] = j;
+            break;
+        }
+    }
+}
+~~~
 		
 		练习题：
 		POJ 2234 Matches Game
