--- a/2018-10-11概率与期望.md
+++ b/2018-10-11概率与期望.md
@@ -16,4 +16,4 @@ grammar_cjkRuby: true
 >这个问题有一个名字，叫做优惠券收集问题（Coupon collector's problem）。在离散概率中，这是最为经典的问题之一，早在 1957 年《概率论及其应用》（An Introduction to Probability Theory and Its Applications）中就有过介绍。这个理论的应用很广。题库里一共有 300 道题，因此平均需要回答 300(1 + 1/2 + 1/3 + … + 1/300) ≈ 1884.8 个问题才能答遍所有的问题。由于一次测试有 20 道题，因此平均需要做 94.24 次测试才能把每个问题都见一遍。不过，实际需要的测试次数应该比这个数小，因为系统似乎能避免同一套测试题里有重复的题目。
 
 
-[文章](https://www.cnblogs.com/hua-dong/p/8166093.html)
+[期望DP文章](https://www.cnblogs.com/hua-dong/p/8166093.html)
