修改文件: 2018-10-11概率与期望.md

--- a/2018-10-11概率与期望.md
+++ b/2018-10-11概率与期望.md
@@ -17,3 +17,4 @@ grammar_cjkRuby: true
 
 
 [期望DP文章](https://www.cnblogs.com/hua-dong/p/8166093.html)
+[期望DP题目](https://www.cnblogs.com/kuangbin/category/417528.html)
