--- a/2018-10-11Luogu1365期望DP.md
+++ b/2018-10-11Luogu1365期望DP.md
@@ -23,10 +23,10 @@ grammar_cjkRuby: true
 exp[i] = exp[i - 1] + com[i - 1] * 2 + 1
 com[i] = com[i - 1] + 1
 
-如果是s[i] == x:
+==如果是s[i] == x:==
 exp[i] = exp[i - 1]
 com[i] = 0
 
-如果是s[i] == ?:
+==如果是s[i] == ?，因为各有 0.5 的可能性:==
 exp[i] = exp[i - 1] + com[i - 1] + 0.5
 com[i] = (com[i - 1] + 1) / 2
