--- a/2018-10-11Luogu1365期望DP.md
+++ b/2018-10-11Luogu1365期望DP.md
@@ -12,9 +12,9 @@ grammar_cjkRuby: true
 >比如oo?xx的话，?是o的话就是oooxx => 9，是x的话就是ooxxx => 4
 >期望自然就是(4+9)/2 =6.5(4+9)/2=6.5了
 
-### **可以设exxxxp[i]=ans表示到第ii位的期望长度为ansans， 也就是答案**
+### **可以设exp[i]=ans表示到第i位的期望长度为ans， 也就是答案**
 
-### **com[i] = anscom[i]=ans表示到第ii个位置连续'o'的期望长度为ansans**
+### **com[i] = ans表示到第i个位置连续'o'的期望长度为ans**
 
 考虑几种转移：
 
@@ -30,3 +30,33 @@ com[i] = 0
 ==如果是s[i] == ?，因为各有 0.5 的可能性:==
 exp[i] = exp[i - 1] + com[i - 1] + 0.5
 com[i] = (com[i - 1] + 1) / 2
+
+~~~cpp
+#include<cstdio>
+#define N 300005
+#define db double
+
+int n;
+db f[N];
+db g[N];
+char ch[N];
+
+signed main(){
+    scanf("%d",&n);
+    scanf("%s",ch+1);
+    for(int i=1;i<=n;i++){
+        if(ch[i]=='o'){
+            f[i]=f[i-1]+2*g[i-1]+1;
+            g[i]=g[i-1]+1;
+        } else if(ch[i]=='x'){
+            f[i]=f[i-1];
+            g[i]=0;
+        } else{
+            g[i]=(g[i-1]+1)/2.0;
+            f[i]=0.5*f[i-1]+0.5*(f[i-1]+2*g[i-1]+1);
+        }
+    }
+    printf("%.4lf\n",f[n]);
+    return 0;
+}
+~~~
