修改文件: 2018-10-11Luogu1365期望DP.md

--- a/2018-10-11Luogu1365期望DP.md
+++ b/2018-10-11Luogu1365期望DP.md
@@ -41,7 +41,7 @@ db f[N];
 db g[N];
 char ch[N];
 
-signed main(){
+int main(){
     scanf("%d",&n);
     scanf("%s",ch+1);
     for(int i=1;i<=n;i++){
