修改文件: 2018-10-10SG函数与博弈论.md

--- a/2018-10-10SG函数与博弈论.md
+++ b/2018-10-10SG函数与博弈论.md
@@ -83,22 +83,24 @@ int main(){
 >ak = [ k * (1 + √5) / 2 ]     ,   ([x]表示对x取整，也就是 (int)x )    
 >bk = ak + k
 
-[例题二](https://vjudge.net/contest/260386#problem/R)
+[例题二](https://www.luogu.org/problemnew/show/P2252)
 ~~~cpp
 #include<cstdio>
+#include<cmath>
+#define min(a,b) (a < b ? a : b)
+#define max(a,b) (a > b ? a : b)
+using namespace std;
 int main(){
     int n, m;
-    while(scanf("%d%d",&n,&m)!=EOF)
-    {
-        int a=min(n,m);
-        int b=max(n,m);
-        double k=(double)b-a;
-        int term=(int)(k*(1+sqrt(5))/2);
-        if(term==a)
-            printf("0\n");
-        else
-            printf("1\n");
-    }
+    scanf("%d%d",&n,&m);
+    int a=min(n,m);
+    int b=max(n,m);
+    double k=(double)b-a;
+    int term=(int)(k*(1+sqrt(5))/2);
+    if(term==a)
+        printf("0\n");
+    else
+        printf("1\n");
     return 0;
 }
 ~~~
