--- a/2018-10-12简单博弈Luogu1857.md
+++ b/2018-10-12简单博弈Luogu1857.md
@@ -78,3 +78,89 @@ int main(){
 	return 0;
 }
 ```
+
+## std
+
+``` cpp
+#include<bits/stdc++.h>
+using namespace std;
+int n,s[20010][2]={0},a[20]={0},pr[20010]={1,1},p[3000]={0},ma=0,sum=0;
+inline int read(int &num)
+{
+    num=0;
+    char c=getchar();
+    for(;isdigit(c)==0;c=getchar());
+    for(;isdigit(c)!=0;c=getchar())num=num*10+c-'0';
+}
+
+inline void init()
+{
+    read(n);
+    for(int i=1;i<=n;++i)
+    {
+        read(a[i]);
+        if(a[i]>ma)ma=a[i];//寻找最大值，以便线下操作
+    }
+    return;
+}
+
+inline void first()//筛法，pr[i]=0表示质数，pr[i]=1表示合数 
+{
+    for(int i=2;i<=ma;++i)
+    if(pr[i]==0)
+    {
+        p[++sum]=i;//存储质数，可以节省时间
+        for(int j=i+i;j<=ma;j+=i)pr[j]=1;
+    }
+    return;
+}
+
+inline void dp()
+{
+    s[0][1]=-1;s[0][0]=0;
+    s[1][1]=-1;s[1][0]=0;
+    s[2][1]=1;s[2][0]=1;
+    s[3][1]=1;s[3][0]=1;//初始化几个点
+    for(int i=4;i<=ma;++i)
+    for(int j=sum;j>=1;--j)//j不能反过来，会WA
+    if(p[j]<=i)
+    { 
+        if(s[i-p[j]][1]==-1)//前驱为必败态
+        if(s[i][1]==0||s[i][1]==-1)//如果未判定状态
+        {
+            s[i][1]=1;//置必胜态
+            s[i][0]=s[i-p[j]][0]+1;
+        }
+        else
+        s[i][0]=min(s[i][0],s[i-p[j]][0]+1);//选取最小值
+
+        if(s[i-p[j]][1]==1)//前驱为必败态
+        if(s[i][1]==0)//如果未置状态
+        {
+            s[i][1]=-1;
+            s[i][0]=s[i-p[j]][0]+1;
+        }
+        else if(s[i][1]==-1)//如果已置必败态
+        s[i][0]=max(s[i][0],s[i-p[j]][0]+1);//寻找最大值
+    }
+    return;
+}
+
+inline void print()
+{
+    for(int i=1;i<=n;++i)
+    if(s[a[i]][1]==-1)
+    printf("-1\n");
+    else printf("%d\n",s[a[i]][0]);
+    return;
+}
+
+int main()
+{
+    init();
+    first();
+    dp();
+    print(); 
+    return 0;
+}
+```
