修改文件: 2018-10-13特征方程和特征根.md

--- a/2018-10-13特征方程和特征根.md
+++ b/2018-10-13特征方程和特征根.md
@@ -32,3 +32,7 @@ xp - c1xp-1 - c2xp-2 -...- cpx0 = 0	④
 特征方程：x2 - 5x + 6 = 0
 
 ## a1=2, a2=3是特征根
+
+### 例题
+
+![NOIP2017初赛T10](./images/1539404169679.png)
