修改文件: 2018-10-13特征方程和特征根.md

--- a/2018-10-13特征方程和特征根.md
+++ b/2018-10-13特征方程和特征根.md
@@ -4,6 +4,10 @@ tags: 离散数学,特征方程
 grammar_cjkRuby: true
 ---
 
+### 通用方法
+
+![](./images/1539404937110.png)
+
 
 有递推关系：an = c1an-1 + c2an-2 + ... + cpan-p   ①
 
