修改文件: 2018-10-15倍增LAC模板.md

--- a/2018-10-15倍增LAC模板.md
+++ b/2018-10-15倍增LAC模板.md
@@ -3,7 +3,7 @@ title: 2018-10-15倍增LAC模板
 tags: 算法,OI
 grammar_cjkRuby: true
 ---
-加倍，加倍，超级加倍
+加倍，加倍，超级加倍！！！
 ~~~cpp
 #include<cstdio>
 #include<queue>
