修改文件: 2018-10-15Luogu2458[SDOI2006]保安站岗.md

--- a/2018-10-15Luogu2458[SDOI2006]保安站岗.md
+++ b/2018-10-15Luogu2458[SDOI2006]保安站岗.md
@@ -15,15 +15,13 @@ grammar_cjkRuby: true
 
 我们设dp[0/1/2][u]表示u节点所在子树中全部被控制的最小代价，0表示只有u节点尚未被控制(等待被其父亲节点控制)；
 
-1表示u节点已经被控制，但u节点上没有保安，所以不能去控制其父亲节点；2表示u节点上有保安
-
-(机房的神犇说多维数组要把小的那一维写在前面，因为可以优化常数，原理请自行翻阅一本通)
+1表示u节点已经被控制，但u节点上没有保安，被其字节点控制；2表示u节点上有保安
 
 转移：(以下设v是u的儿子节点)
 
 dp[0][u]=∑min(dp[1][v],dp[2][v]) i节点上反正没有保安，那么儿子节点只要保证全部控制即可，显然1,2状态都是满足的
 
-dp[1][u]=∑min(dp[1][v],dp[2][v]) + 某一个dp[2][v] 也就是说对于其中一个儿子取dp[2][v]而其他儿子取min(dp[1][v],dp[2][v])意为i号点必须要找一个儿子来覆盖它，其余随意。这个地方涉及到了算法复杂度的问题，楼下有些题解在这里写的是O(n^2)的转移，但实际上完全可以做到O(n)。具体在代码中细讲。
+dp[1][u]=∑min(dp[1][v],dp[2][v]) + 某一个dp[2][v] 也就是说对于其中一个儿子取dp[2][v]而其他儿子取min(dp[1][v],dp[2][v])意为i号点必须要找一个儿子来覆盖它，其余随意。这个地方涉及到了算法复杂度的问题，实际上完全可以做到O(n)。具体在代码中细讲。
 
 dp[2][u]=∑min(dp[0][v],dp[1][v],dp[2][v])+val[u] 这个就简单了，i号点上反正有保安了，所有儿子节点都无所谓了，全部可以转移。
 
