修改文件: 2018-10-15Luogu2458[SDOI2006]保安站岗.md

--- a/2018-10-15Luogu2458[SDOI2006]保安站岗.md
+++ b/2018-10-15Luogu2458[SDOI2006]保安站岗.md
@@ -13,9 +13,13 @@ grammar_cjkRuby: true
 
 3、被当前节点上的保安控制
 
-我们设dp[0/1/2][u]表示u节点所在子树中全部被控制的最小代价，0表示只有u节点尚未被控制(等待被其父亲节点控制)；
+我们设dp[0/1/2][u]表示u节点所在子树中全部被控制的最小代价。
 
-1表示u节点已经被控制，但u节点上没有保安，被其字节点控制；2表示u节点上有保安
+0表示等待被其父亲节点控制；
+
+1表示u节点已经被控制，但u节点上没有保安，被其子节点控制；
+
+2表示u节点上有保安
 
 转移：(以下设v是u的儿子节点)
 
@@ -67,7 +71,7 @@ void dfs(int u,int fa)
         if (v==fa) continue;
         dp[1][u]=min(dp[1][u],sum-min(dp[1][v],dp[2][v])+dp[2][v]);
     }
-    //上面sum维护出了∑min(dp[1][v],dp[2][v])，那么我们只要把其中的一个min(dp[1][v],dp[2][v])替换成dp[2][v]然后维护最小值即可
+    //上面sum维护出了∑min(dp[1][v],dp[2][v])，那么只要把其中的一个min(dp[1][v],dp[2][v])替换成dp[2][v]然后维护最小值即可
 }
 int main()
 {
