修改文件: 2018-10-15Luogu1026 统计单词个数.md

--- a/2018-10-15Luogu1026 统计单词个数.md
+++ b/2018-10-15Luogu1026 统计单词个数.md
@@ -5,7 +5,7 @@ grammar_cjkRuby: true
 ---
 这道题思维难度并不大，主要是需要处理Hash，下次需要多做一下hash的题了
 
-~~~cpp
+~~~cpp?linenums
 #include<cstdio>
 #include<cstring>
 #include<algorithm>
