修改文件: 学习笔记.md

--- a/学习笔记.md
+++ b/学习笔记.md
@@ -7,3 +7,15 @@ grammar_cjkRuby: true
 >并查集善用于维护图的联通分量集合
 
 简单得来说可以比较在线判环
+
+解决一些在并查集上距离的问题，可以采用记录d[x]表示到根节点的距离，也就是带比边权并查集的方法。
+
+```cpp?linenums
+int find(int x){
+	if(x == fa[x])
+		return x;
+	int root = find(fa[x]);
+	d[x] += d[fa[x]];
+	return fa[x] = root;
+}
+```
