修改文件: 学习笔记.md

--- a/学习笔记.md
+++ b/学习笔记.md
@@ -14,8 +14,8 @@ grammar_cjkRuby: true
 int find(int x){
 	if(x == fa[x])
 		return x;
-	int root = find(fa[x]);
-	d[x] += d[fa[x]];
-	return fa[x] = root;
+	int root = find(fa[x]);//记录其根节点
+	d[x] += d[fa[x]];//由于是先更新，所以其父节点已经更新过了，x节点只要直接加上父节点的d[fa[x]]再加上自己本身到父节点的距离
+	return fa[x] = root;//不忘记把自己的父亲变为根节点返回根节点
 }
 ```
