--- a/学习笔记.md
+++ b/学习笔记.md
@@ -18,4 +18,9 @@ int find(int x){
 	d[x] += d[fa[x]];//由于是先更新，所以其父节点已经更新过了，x节点只要直接加上父节点的d[fa[x]]再加上自己本身到父节点的距离
 	return fa[x] = root;//不忘记把自己的父亲变为根节点返回根节点
 }
+
+void bing(int x,int y){//加入是把x加入到y节点上
+	x = find(x);y = find(y);
+	
+}
 ```
