修改文件: 学习笔记.md

--- a/学习笔记.md
+++ b/学习笔记.md
@@ -20,7 +20,7 @@ int find(int x){
 }
 
 void bing(int x,int y){//加入是把x加入到y节点上
-	x = find(x);y = find(y);
-	
+	fa[x] = y;
+	d[x] = dist(x,y);
 }
 ```
