修改文件: 学习笔记.md

--- a/学习笔记.md
+++ b/学习笔记.md
@@ -27,6 +27,6 @@ void bing(int x,int y){//加入是把x加入到y节点上
 对于一些要把x所在的一整条加入y的尾部的时候
 我们需要处理一个size[]数组，表示这条路径积累了多长了
 这样就可以把x这棵树的根节点的父亲直接变成y节点的父亲
-然后d[x]变成其路径积累的值
+然后d[x]变成其路径积累的值，并且把y积累的值再加上x积累的值
 */
 ```
