修改文件: 2018-10-16树状数组.md

--- a/2018-10-16树状数组.md
+++ b/2018-10-16树状数组.md
@@ -5,7 +5,89 @@ grammar_cjkRuby: true
 ---
 树状数组模板，需要注意的是理解其运作原理
 
-```csharp?linenums
+还有一个就是拓展的树状数组，大意就是区间修改，区间查询，而普通树状数组是单点修改，区间查询。
+
+所以我们就可以记一个操作树状数组，比如在l地方加上k，然后在r + 1地方减去k，其操作的前缀和保持了区间加了k。然后在这个点的操作前缀和加上原来的a[x]即可。
+
+```cpp?linenums
+#include<cstdio>
+#define MAXN 500005
+#define lowbit(x) (x & -x)
+int read(){
+	char c = getchar();
+	bool flag = true;
+	while(c < '0' || '9' < c){
+		if(c == '-')
+			flag = false;
+		c = getchar();
+	}
+	int x = 0;
+	while('0' <= c && c <= '9'){
+		x = 10 * x + c - '0';
+		c = getchar();
+	}
+	return flag ? x : -x;
+}
+int n,m,c[MAXN],a[MAXN];
+int buf[15];
+void printf(int x){
+	buf[0] = 0;
+	if(x == 0){
+		buf[0] = 1;
+	}else{
+		if(x < 0){
+			putchar('-');
+			x = -x;
+		}
+		while(x){
+			buf[++buf[0]] = x % 10;
+			x /= 10;
+		}
+	}
+	for(int i = buf[0];i;i--)
+		putchar(buf[i] + '0');
+	puts("");
+}
+void add(int x,int k){
+	while(x <= n){
+		c[x] += k;
+		x += lowbit(x);
+	}
+}
+
+int find(int x){
+	int ans = 0;
+	while(x > 0){
+		ans += c[x];
+		x -= lowbit(x);
+	}
+	return ans;
+}
+
+int main(){
+	//freopen("testdata.in","r",stdin);
+	n = read();
+	m = read();
+	for(int i = 1;i <= n;i++){
+		a[i] = read();
+	}
+	for(int i = 1;i <= m;i++){
+		if(read() == 1){
+			int x = read();
+			int y = read();
+			int k = read();
+			add(x,k);
+			add(y + 1,-k);
+		}else{
+			int x = read();
+			printf(find(x) + a[x]);
+		}
+	}
+	return 0;
+}
+```
+
+```cpp?linenums
 #include<cstdio>
 #define MAXN 500005
 #define lowbit(x) (x & -x)
