--- a/线段树.md
+++ b/线段树.md
@@ -3,7 +3,136 @@ title: 线段树
 tags: 数据结构,模板,线段树
 grammar_cjkRuby: true
 ---
+[线段树模板题](https://www.luogu.org/problemnew/show/P3372)
 
+```cpp?linenums
+#include<cstdio>
+#define MAXN 100005
+#define sum(a,b) (a + b)
+#define ls(x) (x << 1)
+#define rs(x) ((x << 1) + 1)
+using namespace std;
+typedef long long ll;
+int read(){
+	char c = getchar();
+	bool flag = true;
+	while(c < '0' || '9' < c){
+		if(c == '-')
+			flag = false;
+		c = getchar();
+	}
+	int x = 0;
+	while('0' <= c && c <= '9'){
+		x = 10 * x + c - '0';
+		c = getchar();
+	}
+	return flag ? x : -x;
+}
+int buf[25];
+void printf(ll x){
+	buf[0] = 0;
+	if(x == 0){
+		buf[0] = 1;
+	}else{
+		if(x < 0){
+			putchar('-');
+			x = -x;
+		}
+		while(x){
+			buf[++buf[0]] = x % 10;
+			x /= 10;
+		}
+	}
+	for(int i = buf[0];i;i--)
+		putchar(buf[i] + '0');
+	puts("");
+}
+int n,m;
+ll a[MAXN];//数据数组 
+ll sumv[MAXN << 2];//信息数组 
+ll addv[MAXN << 2];//标记数组 
+
+void pushup(int o){
+	sumv[o] = sum(sumv[ls(o)] , sumv[rs(o)]);
+}
+
+void pushdown(int o,int L,int R){
+	if(addv[o]){//如果存在延迟标记 
+		int M = (L + R) >> 1;
+		addv[ls(o)] += addv[o];//传下标记 
+		addv[rs(o)] += addv[o];
+		//更新时候需要注意乘上对应区间的个数 
+		//左子节点管理了L --- M的值 
+		sumv[ls(o)] += (M - L + 1) * addv[o];//更新其左子节点的值 
+		//右子节点管理了M + 1 --- R的值 
+		sumv[rs(o)] += (R - M) * addv[o];//更新其右节点的值 
+		addv[o] = 0;
+	}
+} 
+
+int ql,qr;
+ll query(int o,int L,int R){//区间查询 
+	if(ql <= L && R <= qr)
+		return sumv[o];//当查询区间已经包含了该区间 
+	pushdown(o,L,R);
+	int M = (L + R) >> 1;
+	ll ans = 0;
+	if(ql <= M)
+		ans = sum(ans,query(ls(o),L,M));
+	if(M < qr)
+		ans = sum(ans,query(rs(o),M + 1,R));//注意范围
+	return ans;
+}
+
+int lc,rc,v;//要修改的左右区间和值 
+void changes(int o,int L,int R){//区间修改 
+	if(lc <= L && R <= rc){
+		sumv[o] += (R - L + 1) * v;
+		addv[o] += v;//addv[]表示要发给子节点的标记
+		return;
+	}
+	pushdown(o,L,R);//放下旧的标记,把自己更新到最新
+	int M = (L + R) >> 1;
+	if(lc <= M)
+		changes(ls(o),L,M);
+	if(M < rc)
+		changes(rs(o),M + 1,R);
+	pushup(o);
+}
+
+void build(int o,int L,int R){
+	if(L == R){//当只有单点时候直接更新 
+		sumv[o] = a[L];
+		return;
+	}
+	int M = (L + R) >> 1;
+	build(ls(o),L,M);//递归左子树 
+	build(rs(o),M + 1,R);//递归右子树 
+	pushup(o);//往上更新 
+}
+
+int main(){
+	n = read();
+	m = read();
+	for(int i = 1;i <= n;i++){
+		a[i] = read();
+	}
+	build(1,1,n);//递归建树
+	for(int i = 1;i <= m;i++){
+		if(read() == 1){
+			lc = read();
+			rc = read();
+			v = read();
+			changes(1,1,n);
+		}else{
+			ql = read();
+			qr = read();
+			printf(query(1,1,n));
+		}
+	}
+	return 0;
+} 
+```
 
 线段树简单运用
 [例题](https://www.luogu.org/problemnew/show/P1816)
