修改文件: 线段树.md

--- a/线段树.md
+++ b/线段树.md
@@ -3,6 +3,36 @@ title: 线段树
 tags: 数据结构,模板,线段树
 grammar_cjkRuby: true
 ---
+
+其他的不介绍了，主要注意的有几点
+
+1.需要多开四倍的数组
+>~~~cpp
+>ll a[MAXN];//数据数组 
+>ll sumv[MAXN << 2];//信息数组 
+>ll addv[MAXN << 2];//标记数组 
+
+2.pushup和pushdown的操作
+>~~~cpp
+>void pushup(int o){
+>	sumv[o] = sum(sumv[ls(o)] , sumv[rs(o)]);
+>}
+>void pushdown(int o,int L,int R){
+>	if(addv[o]){//如果存在延迟标记 
+>		int M = (L + R) >> 1;
+>		addv[ls(o)] += addv[o];//传下标记 
+>		addv[rs(o)] += addv[o];
+>		//更新时候需要注意乘上对应区间的个数 
+>		//左子节点管理了L --- M的值 
+>		sumv[ls(o)] += (M - L + 1) * addv[o];//更新其左子节点的值 
+>		//右子节点管理了M + 1 --- R的值 
+>		sumv[rs(o)] += (R - M) * addv[o];//更新其右节点的值 
+>		addv[o] = 0;
+>	}
+>}
+----------
+
+
 [线段树模板题](https://www.luogu.org/problemnew/show/P3372)
 
 ```cpp?linenums
