--- a/线段树.md
+++ b/线段树.md
@@ -22,7 +22,7 @@ grammar_cjkRuby: true
 >		int M = (L + R) >> 1;
 >		addv[ls(o)] += addv[o];//传下标记 
 >		addv[rs(o)] += addv[o];
->		//更新时候需要注意乘上对应区间的个数 
+>		//更新和值的时候需要注意乘上对应区间的个数 
 >		//左子节点管理了L --- M的值 
 >		sumv[ls(o)] += (M - L + 1) * addv[o];//更新其左子节点的值 
 >		//右子节点管理了M + 1 --- R的值 
@@ -30,6 +30,8 @@ grammar_cjkRuby: true
 >		addv[o] = 0;
 >	}
 >}
+
+
 ----------
 
 
