修改文件: 线段树.md

--- a/线段树.md
+++ b/线段树.md
@@ -31,6 +31,15 @@ grammar_cjkRuby: true
 >	}
 >}
 
+3.注意pushup和pushdown的时间
+>**pushup**
+>①、建树完成后，往上更新
+>②、修改完成后，往上更新
+>总的来说就是修改了一下节点后需要pushup一次
+
+>**pushdown**
+>①查询之前，先放下标记
+>②修改之前，先放下标记
 
 ----------
 
