修改文件: 线段树.md

--- a/线段树.md
+++ b/线段树.md
@@ -39,7 +39,7 @@ grammar_cjkRuby: true
 
 >**pushdown**
 >①查询之前，先放下标记
->②修改之前，先放下标记
+>②**修改之前，先放下标记**
 
 ----------
 
@@ -88,13 +88,14 @@ void printf(ll x){
 		putchar(buf[i] + '0');
 	puts("");
 }
+
 int n,m;
 ll a[MAXN];//数据数组 
 ll sumv[MAXN << 2];//信息数组 
 ll addv[MAXN << 2];//标记数组 
 
 void pushup(int o){
-	sumv[o] = sum(sumv[ls(o)] , sumv[rs(o)]);
+	sumv[o] = sum(sumv[ls(o)] , sumv[rs(o)]);//对应的可以改成min，max，xor 
 }
 
 void pushdown(int o,int L,int R){
@@ -107,7 +108,7 @@ void pushdown(int o,int L,int R){
 		sumv[ls(o)] += (M - L + 1) * addv[o];//更新其左子节点的值 
 		//右子节点管理了M + 1 --- R的值 
 		sumv[rs(o)] += (R - M) * addv[o];//更新其右节点的值 
-		addv[o] = 0;
+		addv[o] = 0;//重置标记 
 	}
 } 
 
@@ -115,11 +116,11 @@ int ql,qr;
 ll query(int o,int L,int R){//区间查询 
 	if(ql <= L && R <= qr)
 		return sumv[o];//当查询区间已经包含了该区间 
-	pushdown(o,L,R);
+	pushdown(o,L,R);//查询之前先放下标记 
 	int M = (L + R) >> 1;
 	ll ans = 0;
 	if(ql <= M)
-		ans = sum(ans,query(ls(o),L,M));
+		ans = sum(ans,query(ls(o),L,M));//注意范围
 	if(M < qr)
 		ans = sum(ans,query(rs(o),M + 1,R));//注意范围
 	return ans;
@@ -132,17 +133,17 @@ void changes(int o,int L,int R){//区间修改
 		addv[o] += v;//addv[]表示要发给子节点的标记
 		return;
 	}
-	pushdown(o,L,R);//放下旧的标记,把自己更新到最新
+	pushdown(o,L,R);//放下自己旧的标记,把自己更新到最新
 	int M = (L + R) >> 1;
 	if(lc <= M)
-		changes(ls(o),L,M);
+		changes(ls(o),L,M);//递归修改左节点 
 	if(M < rc)
-		changes(rs(o),M + 1,R);
+		changes(rs(o),M + 1,R);//递归修改右节点 
 	pushup(o);
 }
 
 void build(int o,int L,int R){
-	if(L == R){//当只有单点时候直接更新 
+	if(L == R){//当只有单点时候直接初始化
 		sumv[o] = a[L];
 		return;
 	}
