修改文件: 线段树.md

--- a/线段树.md
+++ b/线段树.md
@@ -35,7 +35,7 @@ grammar_cjkRuby: true
 >**pushup**
 >①、建树完成后，往上更新
 >②、修改完成后，往上更新
->总的来说就是修改了一下节点后需要pushup一次
+>总的来说就是修改了子节点后需要pushup一次
 
 >**pushdown**
 >①查询之前，先放下标记
