修改文件: 线段树.md

--- a/线段树.md
+++ b/线段树.md
@@ -47,7 +47,7 @@ grammar_cjkRuby: true
 
 [线段树模板题](https://www.luogu.org/problemnew/show/P3372)
 
-```cpp?linenums
+```cpp
 #include<cstdio>
 #define MAXN 100005
 #define sum(a,b) (a + b)
@@ -179,7 +179,7 @@ int main(){
 线段树简单运用
 [例题1](https://www.luogu.org/problemnew/show/P1816)
 注意建树方法和递归边界
-```cpp?linenums
+```cpp
 #include<cstdio>
 #define MAXN 100005
 #define min(a,b) (a < b ? a : b)
