修改文件: 2018-10-15RQM问题.md

--- a/2018-10-15RQM问题.md
+++ b/2018-10-15RQM问题.md
@@ -3,11 +3,15 @@ title: 2018-10-15RQM问题
 tags: 区间最值,RQM,二进制
 grammar_cjkRuby: true
 ---
-RMQ其实就是简单的倍增的产物，加倍加倍超级加倍
+RMQ其实就是简单的倍增的产物，思路就是把大区间分解了，注意边界是
+
+>更新边界 **f[j][i - 1],f[j + (1 << (i - 1))][i - 1]**
+
+>查询边界 **f[l][k],f[r - (1 << k) + 1][k]**
 
 主要就是把区间分解了，但是主要分解对于lg的大小，这题里面需要特别的把它设大一点，不然会RE和WA
 [Luogu1816 忠诚](https://www.luogu.org/problemnew/show/P1816)
-```cpp?linenums
+```cpp
 #include<cstdio>
 #include<cmath>
 #include<cstring>
@@ -42,7 +46,7 @@ int main(){
 		int l = read();
 		int r = read();
 		int k = log2(r - l + 1);
-		printf("%d ",min(f[l][k],f[r - (1 << k) + 1][k]));
+		printf("%d ",min(f[l][k],f[r - (1 << k) + 1][k]));//第一个范围左边、第二个范围右边溢出也没关系
 	}
 	return 0;
 }
