修改文件: 2018-10-16树状数组.md

--- a/2018-10-16树状数组.md
+++ b/2018-10-16树状数组.md
@@ -9,7 +9,7 @@ grammar_cjkRuby: true
 
 所以我们就可以记一个操作树状数组，比如在l地方加上k，然后在r + 1地方减去k，其操作的前缀和保持了区间加了k。然后在这个点的操作前缀和加上原来的a[x]即可。
 
-```cpp?linenums
+```cpp
 #include<cstdio>
 #define MAXN 500005
 #define lowbit(x) (x & -x)
