修改文件: 2018-10-16线段树乘法加法的混合操作.md

--- a/2018-10-16线段树乘法加法的混合操作.md
+++ b/2018-10-16线段树乘法加法的混合操作.md
@@ -10,3 +10,14 @@ grammar_cjkRuby: true
 那么结果为(x + add) * mul = x * mul + add * mul。这样向下传标记的时候就相对独立。递归边界更新加法标记之前先乘上该节点的mul，左右儿子down的时候先将儿子的add乘上本节点的mul。
 
 最后说一下sum，比如本节点的存在加法标记x和乘法标记y，并且是先加上x，再乘上y，则左儿子的sum要更新为(sum+x) * y。由于乘法标记传到本节点的时候更新了加法标记，x = x * y，所以sum[o<<1] = (左区间的长度 * x) + sum[o<<1] * y。
+
+>**原理解释：**
+>1.当对某区间执行加法操作时，由于加法优先级低，不会对乘法操作产生影响，故直接相加即可；
+>2.当对某区间执行乘法操作时，由于乘法优先级高，会对之前的加法操作产生影响，故需要在相乘时不仅对sum和mulv相乘，也需要对addv相乘；
+
+>**细节实现：**
+>1.子树的sum、mulv、addv值分别乘上当前节点的mulv值；
+>2.当前节点的mulv值还原，即置为1；
+3.子树的addv值加上当前节点的addv值；
+4.子树的sum值加上（子树包含元素数量*当前节点的addv值）；
+5.当前节点的addv值还原，即置为0。
