修改文件: 2018-10-16线段树乘法加法的混合操作.md

--- a/2018-10-16线段树乘法加法的混合操作.md
+++ b/2018-10-16线段树乘法加法的混合操作.md
@@ -21,3 +21,93 @@ grammar_cjkRuby: true
 3.子树的addv值加上当前节点的addv值；
 4.子树的sum值加上（子树包含元素数量*当前节点的addv值）；
 5.当前节点的addv值还原，即置为0。
+
+**代码实现**
+```cpp
+#include <cstdio>
+#define lson o<<1, l, m
+#define rson o<<1|1, m+1, r
+typedef long long LL;
+const int maxn = 100005;
+ 
+int n, a, b, c, k, m;
+LL sum[maxn<<2], add[maxn<<2], mul[maxn<<2], p;
+ 
+void pushup(int o){
+    sum[o] = (sum[o<<1]+sum[o<<1|1]) %p;
+}
+void build(int o, int l, int r){
+    add[o] = 0, mul[o] = 1;//乘法标记初始化为1 
+    if(l == r) {
+        scanf("%lld", &sum[o]);
+        return;
+    }
+    int m = (l+r) >> 1;
+    build(lson);
+    build(rson);
+    pushup(o);
+}
+ 
+void pushdown(int o, int len){
+    add[o<<1] = (add[o<<1] * mul[o] + add[o]) %p;
+    add[o<<1|1] = (add[o<<1|1] * mul[o] + add[o]) %p;
+    mul[o<<1] = mul[o<<1] * mul[o] %p;
+    mul[o<<1|1] = mul[o<<1|1] * mul[o] %p;
+    sum[o<<1] = (sum[o<<1] * mul[o] + add[o] * (len-(len>>1))) %p;
+    sum[o<<1|1] = (sum[o<<1|1] * mul[o] + add[o] * (len>>1)) %p;
+    add[o] = 0, mul[o] = 1;
+}
+/*
+1.子树的sum、mulv、addv值分别乘上当前节点的mulv值；
+
+2.当前节点的mulv值还原，即置为1；
+
+3.子树的addv值加上当前节点的addv值；
+
+4.子树的sum值加上（子树包含元素数量*当前节点的addv值）；
+
+5.当前节点的addv值还原，即置为0。
+*/ 
+ 
+void update(int o, int l, int r, int op){
+    if(a <= l && r <= b) {
+        if(op == 1) {
+            add[o] = add[o]*c %p;
+            mul[o] = mul[o]*c %p;
+            sum[o] = sum[o]*c %p;
+        } else {
+            add[o] = (add[o] + c) %p;
+            sum[o] = (sum[o] + (LL)c*(r-l+1)) %p;
+        }
+        return;
+    }
+    pushdown(o, r-l+1);
+    int m = (l+r) >> 1;
+    if(a <= m) update(lson, op);
+    if(m < b ) update(rson, op);
+    pushup(o);
+}
+ 
+LL query(int o, int l, int r){
+    if(a <= l && r <= b) return sum[o] %p;
+    pushdown(o, r-l+1);
+    int m = (l+r) >> 1;
+    LL ans = 0;
+    if(a <= m) ans = query(lson);
+    if(m < b ) ans += query(rson);
+    return ans %p;
+}
+ 
+int main(){
+    scanf("%d%d%lld", &n,&m,&p);
+    build(1, 1, n);
+    while(m--){
+        scanf("%d%d%d", &k, &a, &b);
+        if(k != 3) {
+            scanf("%d", &c);
+            update(1, 1, n, k);
+        } else printf("%lld\n", query(1, 1, n));
+    }
+    return 0;
+}
+```
