修改文件: 2018-10-16线段树乘法加法的混合操作.md

--- a/2018-10-16线段树乘法加法的混合操作.md
+++ b/2018-10-16线段树乘法加法的混合操作.md
@@ -3,7 +3,7 @@ title: 2018-10-16线段树乘法加法的混合操作
 tags: 线段树,模板,
 grammar_cjkRuby: true
 ---
-
+[Link](https://www.luogu.org/problemnew/show/P3373)
 
 两种操作就不能简单的只往下传标记。每次传乘法标记时，要把加法标记同时乘上乘法标记，例如某个区间先进来一个加法标记add，之后又进来一个乘法标记mul。
 
