修改文件: 2018-10-16线段树乘法加法的混合操作.md

--- a/2018-10-16线段树乘法加法的混合操作.md
+++ b/2018-10-16线段树乘法加法的混合操作.md
@@ -58,13 +58,13 @@ void pushdown(int o, int len){
     add[o] = 0, mul[o] = 1;
 }
 /*
-1.子树的sum、mulv、addv值分别乘上当前节点的mulv值；
+1.子树的sum、mul、add值分别乘上当前节点的mulv值；
 
-2.当前节点的mulv值还原，即置为1；
+2.当前节点的mul值还原，即置为1；
 
-3.子树的addv值加上当前节点的addv值；
+3.子树的add值加上当前节点的addv值；
 
-4.子树的sum值加上（子树包含元素数量*当前节点的addv值）；
+4.子树的sum值加上（子树包含元素数量*当前节点的add值）；
 
 5.当前节点的addv值还原，即置为0。
 */ 
