修改文件: 2018-10-17BZOJ3211线段树区间开方求和操作.md

--- a/2018-10-17BZOJ3211线段树区间开方求和操作.md
+++ b/2018-10-17BZOJ3211线段树区间开方求和操作.md
@@ -3,7 +3,7 @@ title: 2018-10-17线段树区间开方求和操作
 tags: 新建,模板,小书匠
 grammar_cjkRuby: true
 ---
-
+[花神游历各国](https://www.lydsy.com/JudgeOnline/problem.php?id=3211)
 可以知道这个开方操作进行了一定的次数就会等于1了，如下图所示
 
 ![](./images/1539749635891.png)
