修改文件: 2018-10-17BZOJ3211线段树区间开方求和操作.md

--- a/2018-10-17BZOJ3211线段树区间开方求和操作.md
+++ b/2018-10-17BZOJ3211线段树区间开方求和操作.md
@@ -8,7 +8,7 @@ grammar_cjkRuby: true
 
 ![](./images/1539749635891.png)
 
-这样我们只要记录这个区间的最大值，如果最大值大于1，则可以继续开平方，否则就返回啦，**重要的是这里把pushdown当做了开平方操作了用**
+这样我们只要记录这个区间的最大值，如果最大值大于1，则可以继续开平方，否则就返回啦，**重要的是这里把pushdown当做了开平方操作用**
 
 ```cpp
 #include<cstdio>
