修改文件: 2018-10-17NOIP2012借教室.md

--- a/2018-10-17NOIP2012借教室.md
+++ b/2018-10-17NOIP2012借教室.md
@@ -10,7 +10,12 @@ grammar_cjkRuby: true
 ### 一种比较简单的做法是二分，但是考场比较难想到
 ### 另一种思路比较明显，但是要想到也不容易，就是线段树
 
- 1. 差分思路
+ 1. 差分+前缀和思路
+
+
+因为这里的订单是从s开始，r结束，差分一下。
+二分检测 + 差分判断
+
 
 ***证明：***
 
@@ -19,6 +24,8 @@ grammar_cjkRuby: true
 > c[s]:=c[s]+d;c[t+1]:=c[t+1]-d;
 > 
 > 那么如果第i天在s和t之间，那么前i天的sum{c[i]}中有c[s],相当于已经记下第i天的订单数量了。如果第i天在t之后，前i天的sum{c[i]}中有c[s]和c[t],因为c[s]+d+c[t+1]-d=c[s]+c[t]，所以这个订单只对s和t中间天数起作用。得证！
+
+**主代码**
 
 ```cpp
 bool check(int mid)  //判断当前的二分值是否可行  
@@ -40,5 +47,149 @@ bool check(int mid)  //判断当前的二分值是否可行
       if(sum > r[i]) return true;
     }
     return false;
+}
+```
+2.线段树思路
+
+考虑维护区间最小值，如果最小值小于0，说明当前有某个地方不满足
+
+即直接输出当前的i。
+
+但是之前直接的思路没有想到用lazy标记，而是直接暴力放下，导致tel了13个点。
+
+这里如果用延迟标记还是很快的。
+
+```cpp
+#include<cstdio>
+#define ls (o << 1)
+#define rs ((o << 1) + 1)
+#define M ((L + R) >> 1)
+#define min(a,b) (a < b ? a : b)
+#define MAXN 1000005
+typedef long long ll;
+ll minv[MAXN << 2],addv[MAXN << 2],a[MAXN],n,m,lc,rc,v;
+void pushup(int o){
+	minv[o] = min(minv[ls] , minv[rs]);
+}
+void pushdown(int o){
+	if(addv[o]){
+		addv[ls] += addv[o];
+		addv[rs] += addv[o];
+		minv[ls] += addv[o];
+		minv[rs] += addv[o];
+		addv[o] = 0;
+	}
+}
+
+void build(int o,int L,int R){
+	if(L == R){
+		minv[o] = a[L];
+		return;
+	}
+	build(ls,L,M);
+	build(rs,M + 1,R);
+	pushup(o);
+}
+void changes(int o,int L,int R){
+	if(lc <= L && R <= rc){
+		addv[o] -= v;
+		minv[o] -= v;
+		return;
+	}
+	pushdown(o);
+	if(lc <= M)
+		changes(ls,L,M);
+	if(M < rc)
+		changes(rs,M + 1,R);
+	pushup(o);
+}
+
+int main(){
+	scanf("%d%d",&n,&m);
+	for(int i = 1;i <= n;i++){
+		scanf("%d",a + i);
+	}
+	build(1,1,n);
+	for(int i = 1;i <= m;i++){
+		scanf("%d%d%d",&v,&lc,&rc);
+		changes(1,1,n);
+		if(minv[1] < 0){
+			printf("-1\n%d",i);
+			return 0;
+		}
+	}
+	printf("0\n");
+	return 0;
+}
+```
+
+Tel代码
+
+值得借鉴一下
+
+```cpp
+#include<cstdio>
+#define ls (o << 1)
+#define rs ((o << 1) + 1)
+#define M ((L + R) >> 1)
+#define MAXN 1000005
+typedef long long ll;
+ll sumv[MAXN << 2],a[MAXN],n,m,lc,rc,v;
+void pushup(int o){
+    sumv[o] = sumv[ls] + sumv[rs];
+}
+bool pushdown(int o,int L,int R){
+    if(sumv[o] < v * (R - L + 1)){ //平均每天都要v个教室 
+        return false;
+    }
+    if(L == R){
+        return (sumv[o] -= v) >= 0;
+    }
+    if(!pushdown(ls,L,M))
+        return false;
+    if(!pushdown(rs,M + 1,R))
+        return false;
+    pushup(o);
+    return true;
+}
+
+void build(int o,int L,int R){
+    if(L == R){
+        sumv[o] = a[L];
+        return;
+    }
+    build(ls,L,M);
+    build(rs,M + 1,R);
+    pushup(o);
+}
+bool changes(int o,int L,int R){
+    if(lc <= L && R <= rc){
+        //printf("%d %d\n",L,R);
+        return pushdown(o,L,R);//这一个区间内都要减
+    }
+    if(lc <= M)
+        if(!changes(ls,L,M))
+            return false;
+    if(M < rc)
+        if(!changes(rs,M + 1,R))
+            return false;
+    return true;
+}
+
+int main(){
+    scanf("%d%d",&n,&m);
+    for(int i = 1;i <= n;i++){
+        scanf("%d",a + i);
+    }
+    build(1,1,n);
+    for(int i = 1;i <= m;i++){
+        scanf("%d%d%d",&v,&lc,&rc);
+        if(!changes(1,1,n)){
+            printf("-1\n%d",i);
+            return 0;
+        }
+    }
+    printf("0\n");
+    return 0;
 }
 ```
