--- a/2018-10-17NOIP2012借教室.md
+++ b/2018-10-17NOIP2012借教室.md
@@ -28,26 +28,21 @@ grammar_cjkRuby: true
 **主代码**
 
 ```cpp
-bool check(int mid)  //判断当前的二分值是否可行  
+bool isok(int x)
 {
-    int i, sum = 0;
-    if(now > mid) 
-      for(i = mid + 1; i <= now; i++) {
-          c[s[i]] -= d[i];
-          c[t[i] + 1] += d[i];
-      }
-    else
-      for(i = now + 1; i <= mid; i++) {  //注意这里是将以前操作的恢复原样，操作相反
-          c[s[i]] += d[i];
-          c[t[i] + 1] -= d[i];
-      }
-    now = mid;
-    for(i = 1; i <= n; i++) {
-      sum += c[i];
-      if(sum > r[i]) return true;
+    memset(diff,0,sizeof(diff));
+    for(int i=1;i<=x;i++)
+    {
+        diff[l[i]]+=d[i];
+        diff[r[i]+1]-=d[i]; 
     }
-    return false;
-}
+    for(int i=1;i<=n;i++)
+    {
+        need[i]=need[i-1]+diff[i];
+        if(need[i]>rest[i])return 0;
+    }
+    return 1;
+} 
 ```
 2.线段树思路
 
