修改文件: 2018-10-17NOIP2012借教室.md

--- a/2018-10-17NOIP2012借教室.md
+++ b/2018-10-17NOIP2012借教室.md
@@ -3,6 +3,9 @@ title: 2018-10-17NOIP2012借教室
 tags: 线段树,差分,前缀和
 grammar_cjkRuby: true
 ---
+
+# 总结：要善用线段树的各种性质
+
 [link](https://www.luogu.org/problemnew/show/P1083)
 
 这道题有两种做法，
