--- a/2018-10-17NOIP2012借教室.md
+++ b/2018-10-17NOIP2012借教室.md
@@ -28,7 +28,7 @@ grammar_cjkRuby: true
 > 
 > 那么如果第i天在s和t之间，那么前i天的sum{c[i]}中有c[s],相当于已经记下第i天的订单数量了。如果第i天在t之后，前i天的sum{c[i]}中有c[s]和c[t],因为c[s]+d+c[t+1]-d=c[s]+c[t]，所以这个订单只对s和t中间天数起作用。得证！
 
-**主代码**
+**Check代码**
 
 ```cpp
 bool isok(int x)
