修改文件: 2018-10-18状压DP笔记.md

--- a/2018-10-18状压DP笔记.md
+++ b/2018-10-18状压DP笔记.md
@@ -80,3 +80,73 @@ int main(){
 	return 0;
 }
 ```
+
+[例题2 互不侵犯的king](https://www.luogu.org/problemnew/show/P1896)
+
+这道题之前是做过了，但是当时并不会写
+
+现在重新做一遍还是花了比较久的时间，原因是调试了特别久
+
+第一个，要明确初始状态，不然很容易错的！！！
+
+这一题的初始状态是f[0][0][0] = 1
+
+其次是注意溢出，不然会少10分的
+
+第三个要善用bitset来调试，调试信息在注释里，去掉注释就可以调试小范围的数据了
+
+```cpp
+#include<cstdio>
+#include<iostream>
+#include<bitset>
+#define lowbit(x) (x & -x)
+using namespace std;
+int n,k;
+long long f[10][1 << 9][85];
+
+bool check(int x,int y){
+	if(x & (x << 1) || y & (y << 1))
+		return false;
+	while(x){
+		int k = lowbit(x);
+		if((y & k) || (y & (k << 1)) || (y & (k >> 1))){
+			return false;
+		}
+		x -= k;
+	}
+	return true;
+}
+
+int count(int x){
+	int tot = 0;
+	while(x){
+		tot++;
+		x -= lowbit(x);
+	}
+	return tot;
+}
+
+int main(){
+	scanf("%d%d",&n,&k);
+	int s = (1 << n) - 1;
+	f[0][0][0] = 1;
+	for(int i = 1;i <= n;i++){
+		for(int j = 0;j <= s;j++){
+			for(int l = 0;l <= k;l++){
+				for(int k = 0;k <= s;k++){
+					if(check(j,k) && count(j) <= l && f[i - 1][k][l - count(j)]){
+						//printf("%d: %d\n",i,l);
+						//cout<<(bitset<3>)k<<endl<<(bitset<3>)j<<endl<<endl;
+						f[i][j][l] += f[i - 1][k][l - count(j)];
+					}
+				}
+			}
+		}
+	}
+	long long ans = 0;
+	for(int i = 0;i <= s;i++)
+		ans += f[n][i][k];
+	printf("%lld\n",ans);
+	return 0;
+}
+```
