修改文件: 2018-10-18状压DP笔记.md

--- a/2018-10-18状压DP笔记.md
+++ b/2018-10-18状压DP笔记.md
@@ -150,3 +150,115 @@ int main(){
 	return 0;
 }
 ```
+
+[例题3 炮兵阵地](https://www.luogu.org/problemnew/show/P2704)
+
+这道题自己一开始想到了要用存两维的，即前面的一维和前面的两维
+
+首先需要预处理出这个两两之间有至少两个空格的集合S，和上一个例题同样的技巧即可。
+
+可以设方程**f[i][j][k] = max(f[i - 1][k][l] + count(j))**
+
+需要满足j & k == 0 && valid(i,j) && valid(i - 1,k) && j & l
+
+count(x)表示对于二进制中1的个数
+
+valid(i,x)表示x是属于集合S的，且第i行上对应x表示的不是非法的
+
+还有对于状压DP一般都可以滚动数组的
+
+```cpp
+#include<cstdio>
+#include<cstring>
+#include<iostream>
+#include<bitset>
+#define lowbit(x) (x & -x)
+#define max(a,b) (a > b ? a : b)
+using namespace std;
+int read(){
+	char c = getchar();
+	bool flag = true;
+	while(c < '0' || '9' < c){
+		if(c == '-')
+			flag = false;
+		c = getchar();
+	}
+	int x = 0;
+	while('0' <= c && c <= '9'){
+		x = 10 * x + c - '0';
+		c = getchar();
+	}
+	return flag ? x : -x;
+}
+char readc(){
+	char c = getchar();
+	while(c < 'A' || 'Z' < c)
+		c = getchar();
+	return c;
+}
+bool check(int x){
+	if(x & (x << 1) || x & (x << 2))
+		return false;
+	return true;
+}
+int count(int x){
+	int tot = 0;
+	while(x){
+		tot++;
+		x -= lowbit(x);
+	}
+	return tot;
+}
+bool a[105][15];
+short f[2][1 << 10][1 << 10];
+int n,m,p[1 << 10],len,ans;
+
+bool valid(int i,int x){
+	for(int j = 1;j <= m;j++){
+		if(!(a[i][j]) && (x & (1 << (j - 1))))
+			return false;
+	}
+	return true;
+}
+
+int main(){
+	//freopen("cannon7.in","r",stdin);
+	//freopen("testdata.out","w",stdout);3
+	//printf("%d\n",sizeof(f) / (1024 * 1024));
+	n = read();
+	m = read();
+	int t = (1 << m) - 1;
+	for(int i = 1;i <= n;i++)
+		for(int j = 1;j <= m;j++){
+			a[i][j] = readc() == 'P' ? true : false;
+		}
+	for(int i = 0;i <= t;i++){
+		if(check(i)){
+			p[++len] = i;
+		}
+	}
+	//printf("%d\n",len);
+	f[0][0][0] = 0;
+	for(int i = 1;i <= n;i++){
+		memset(f[i & 1],~0x3f,sizeof(f[i & 1]));
+		for(int j = 1;j <= len;j++){
+			for(int k = 1;k <= len;k++){
+				for(int l = 1;l <= len;l++){
+					if(valid(i,p[j]) && valid(i - 1,p[k]) && !(p[j] & p[l]) && !(p[j] & p[k])){
+						f[i & 1][p[j]][p[k]] = max(f[i & 1][p[j]][p[k]],f[1 - (i & 1)][p[k]][p[l]] + count(p[j]));
+						ans = max(ans,f[i & 1][p[j]][p[k]]);
+					}
+				}
+			}
+		}
+	}
+	/*
+	for(int j = 0;j <= t;j++)
+		for(int k = 0;k <= t;k++)
+			if(!(j & k) && valid(n,j) && valid(n - 1,k))
+				ans = max(ans,f[n][j][k]);
+				*/
+	printf("%d\n",ans);
+	return 0;
+}
+```
