修改文件: 2018-10-11概率与期望.md

--- a/2018-10-11概率与期望.md
+++ b/2018-10-11概率与期望.md
@@ -4,6 +4,8 @@ tags: 数学,概率,期望
 grammar_cjkRuby: true
 ---
 
+>在概率论和统计学中，数学期望（简称期望）是试验中每次可能结果的概率乘以其结果的总和。是最基本的数学特征之一。它反映随机变量平均取值的大小。
+
 假设干脆面里每一种卡片出现的概率都是均等的。不过，即使在这样的假设下，集齐 108 卡片需要的干脆面数量也远远大于 108。这是因为，虽然刚开始收集时很容易，几乎每次都会看到不一样的卡片，但是越到后来重复的概率也就越高。当你收集到了其中 104 张卡片，只差 4 张卡片时，新买的干脆面里附送的恰好是这 4 张卡片中的一张的概率仅 4/108 = 1/27，也就是说平均还得买 27 袋干脆面才能搞到一张新的卡片。如果就差最后一张卡的话就更艰难了，平均要再买 108 袋干脆面，才能把最后这张收入囊中呢。
 
 类似地，假设你已经收集了 n 张卡片，还有 108 - n 张没有的卡片。那么，下次拆开干脆面，拿到一张新卡片的概率就是 (108 - n)/108，为了拿到一张新卡片平均就需要 108/(108 - n) 袋干脆面。因此，集齐全部 108 张卡片需要的干脆面袋数就是
