修改文件: 2018-10-19STL笔记.md

--- a/2018-10-19STL笔记.md
+++ b/2018-10-19STL笔记.md
@@ -43,3 +43,58 @@ int main(){
 } 
 
 ```
+
+## unique()是C++标准库函数里面的函数，其功能是去除相邻的重复元素（只保留一个），所以使用前需要对数组进行排序，和上面一样减去初始位置即可得到长度
+
+上面的一个使用中已经给出该函数的一个使用方法，对于长度为n数组a，unique(a,a+n) - a返回的是去重后的数组长度
+
+那它是怎么实现去重的呢？删除？
+
+不是，它并没有将重复的元素删除，而是把重复的元素放到数组的最后面藏起来了
+
+```cpp
+#include<iostream>
+#include<cstdio>
+#include<algorithm>
+using namespace std;
+const int N = 100000;
+int a[N+5];
+int main()
+{
+    int n;
+    while (cin>>n)
+    {
+        for (int i = 0;i < n;++i)
+        {
+            scanf("%d",&a[i]);
+        }
+        sort(a,a+n);
+        n = unique(a,a+n) - a;//关键的一句
+        for (int i = 0;i < n;++i)
+        {
+            printf("%d ",a[i]);
+        }
+        puts("");
+    }
+    return 0;
+}
+
+```
+实例
+```cpp
+while (cin>>n)
+    {
+        for (int i = 0;i < n;++i)
+        {
+            scanf("%d",&a[i]);
+        }
+        sort(a,a+n);
+        int k = unique(a,a+n) - a;
+        for (int i = 0;i < n;++i)
+        {
+            printf("%d ",a[i]);
+        }
+        puts("");
+    }
+```
+![](./images/1539938210726.png)
