修改文件: 2018-10-19STL笔记.md

--- a/2018-10-19STL笔记.md
+++ b/2018-10-19STL笔记.md
@@ -44,7 +44,7 @@ int main(){
 
 ```
 
-## unique()是C++标准库函数里面的函数，其功能是去除相邻的重复元素（只保留一个），所以使用前需要对数组进行排序，和上面一样减去初始位置即可得到长度
+**unique()是C++标准库函数里面的函数，其功能是去除相邻的重复元素（只保留一个），所以使用前需要对数组进行排序，和上面一样减去初始位置即可得到长度**
 
 上面的一个使用中已经给出该函数的一个使用方法，对于长度为n数组a，unique(a,a+n) - a返回的是去重后的数组长度
 
