修改文件: 2018-10-20乘法逆元.md

--- a/2018-10-20乘法逆元.md
+++ b/2018-10-20乘法逆元.md
@@ -6,6 +6,17 @@ grammar_cjkRuby: true
 
 ![](./images/1540022759757.png)
 ```cpp
-    a[i] = - (p / i) * a[p % i];
-    a[i] = (a[i] % p + p) % p;
+#include<cstdio>
+#define ll long long
+using namespace std;
+const int maxn=3e6+5;
+ll inv[maxn]={0,1};
+int main(){
+    int n,p;
+    scanf("%d%d",&n,&p);
+    printf("1\n");
+    for(int i=2;i<=n;i++)
+        inv[i]=(ll)p-(p/i)*inv[p%i]%p,printf("%d\n",inv[i]);
+    return 0;
+}
 ```
