修改文件: 2018-10-21树状数组LIS.md

--- a/2018-10-21树状数组LIS.md
+++ b/2018-10-21树状数组LIS.md
@@ -9,7 +9,7 @@ grammar_cjkRuby: true
 #include<cstdio>
 #define max(a,b) (a > b ? a : b)
 #define lowbit(x) (x & -x)
-int c[500000],n,x,a[100000];
+int c[500000],n,a[100000],len = 100000;
 int ask(int p){
 	int ans = 0;
 	for(;p > 0;p -= lowbit(p))
@@ -17,21 +17,22 @@ int ask(int p){
 	return ans;
 }
 void add(int p,int x){
-	for(;p <= n;p += lowbit(p))
+	for(;p <= len;p += lowbit(p)){
 		c[p] = max(c[p],x);
+	}
 }
 int main(){
-	freopen("testdata.in","r",stdin);
+	int x;
+	freopen("data.in","r",stdin);
 	int ans = 0;
 	scanf("%d",&n);
 	for(int i = 1;i <= n;i++){
 		scanf("%d",&x);
 		int maxx = ask(x - 1) + 1;
-		printf("%d ",maxx);
+		printf("%d\n",maxx);
 		add(x,maxx);
 		ans = max(ans,maxx);
 	}
-	printf("\n%d",ans);
 	return 0;
 }
 ```
