修改文件: 2018-10-21BZOJ3173.md

--- a/2018-10-21BZOJ3173.md
+++ b/2018-10-21BZOJ3173.md
@@ -1,6 +1,6 @@
 ---
 title: 2018-10-21BZOJ3173
-tags: 新建,模板,小书匠
+tags: 树状数组,LIS
 grammar_cjkRuby: true
 ---
 
@@ -10,3 +10,59 @@ grammar_cjkRuby: true
 ![Image](./images/1540089943027.png)
 
 那么它在哪里？我们就在这个数组中查找第一个前缀和等于i的位置，那里就是它的真实位置（注意这里的i可以理解为第i个插入的），所以这一步我们使用二分法加一个维护前缀的东西就可以完成（偷懒就用个STL bound挺好的）。我们又一次的到了最终序列，然后就随意DP+优化就完成了。
+
+```cpp
+#include<cstdio>
+#define max(a,b) (a > b ? a : b)
+#define lowbit(x) (x & -x)
+#define MAXN 100005
+int n,a[MAXN],f[MAXN],c[MAXN];
+int find(int p){
+	int ans = 0;
+	for(;p > 0;p -= lowbit(p)){
+		ans += c[p];
+	}
+	return ans;
+}
+void add(int p,int x){
+	for(;p <= n;p += lowbit(p)){
+		c[p] += x;
+	}
+}
+inline void Up(int x,int d){
+	while(x<=n){
+		c[x]=max(c[x],d);
+		x+=lowbit(x);
+	}
+}
+inline int Max(int x){
+	int M=0;
+	while(x)M=max(M,c[x]),x-=lowbit(x);
+	return M;
+}
+int main(){
+	scanf("%d",&n);
+	for(int i = 1;i <= n;i++){
+		scanf("%d",a + i);
+		add(i,1);
+	}
+	for(int i = n;i;i--){
+		int l = 1,r = n;
+		while(l < r){
+			int mid = (l + r) >> 1;
+			if(find(mid) < a[i] + 1){
+				l = mid + 1;
+			}else{
+				r = mid;
+			}
+		}
+		add(a[i] = r,-1);
+	}
+	for(int i = 1;i <= n;i++){
+		Up(a[i],f[i] = Max(a[i]) + 1);
+		f[i]=max(f[i],f[i-1]);
+		printf("%d\n",f[i]);
+	}
+	return 0;
+}
+```
