修改文件: 2018-10-22NOIP2016蚯蚓.md

--- a/2018-10-22NOIP2016蚯蚓.md
+++ b/2018-10-22NOIP2016蚯蚓.md
@@ -5,7 +5,7 @@ grammar_cjkRuby: true
 ---
 [Link](https://www.luogu.org/problemnew/show/P2827)
 
-堆非常容易想出来，注意是要注意这个切蚯蚓是有单调性的，分别用三个队列维护原来的蚯蚓，分别切开两半的蚯蚓。
+堆非常容易想出来，注意是要注意这个切蚯蚓是有单调性的，分别用三个队列维护原来的蚯蚓，分别切开两半的蚯蚓，所以用队列维护是最合适的。
 
 ![思路](./images/1540214362100.png)
 
