修改文件: 2018-10-22手写堆.md

--- a/2018-10-22手写堆.md
+++ b/2018-10-22手写堆.md
@@ -7,6 +7,7 @@ grammar_cjkRuby: true
 
 ```cpp
 #include<cstdio>
+#include<cstring>
 #define MAXN 7000000
 #define fa (now >> 1)
 #define L (now << 1)
@@ -19,16 +20,10 @@ void swap(int & a,int & b){
 	b = t;
 }
 
-void swap(int & a,int & b,int & c){
-	int t = a;
-	a = b;
-	b = t;
-}
-
 int gets(){
 	int x = heap[1],now = 1,next;
 	heap[1] = heap[last];
-	heap[last--] = 0;
+	heap[last--] = ~0x3f3f3f3f;
 	while(now != last){
 		if(L == last){
 			next = L;
@@ -66,10 +61,11 @@ void insert(int x){
 }
 
 int main(){
-	int n;
+	memset(heap,~0x3f,sizeof(heap));
+	//freopen("data.in","r",stdin);
+	int n,x;
 	scanf("%d",&n);
 	for(int i = 1;i <= n;i++){
-		int x;
 		scanf("%d",&x);
 		insert(x);
 	}
@@ -78,4 +74,5 @@ int main(){
 		printf("%d\n",gets());
 	return 0;
 }
+
 ```
